# uavcrew-mcp-server

./: .env.example  .gitignore  PLAN.md  README.md  gunicorn_config.py  manifest.json.example  pyproject.toml  requirements.txt
docs/: DATABASE_SECURITY.md
src/mcp_server/: __init__.py  api_client.py  auth.py  cli.py  http_server.py  manifest.py  minio_client.py  server.py  tenant_db.py  token_resolver.py
src/mcp_server/database/: models.py
src/mcp_server/tools/: __init__.py  certifications.py  raw_database.py  registry.py  storage.py
tests/: test_api_client.py  test_auth.py  test_cli_tenants.py  test_server_middleware.py  test_tenant_api.py  test_token_resolver.py
