[project]
name = "uavcrew-mcp-server"
version = "0.1.0"
description = "MCP Server for UAV crew compliance data - shared by uavcrew and clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Database drivers - install the one(s) you need
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
sqlserver = ["pyodbc>=5.0.0"]
oracle = ["oracledb>=2.0.0"]
# All databases
all-databases = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pyodbc>=5.0.0",
    "oracledb>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"
mcp-http-server = "mcp_server.http_server:main"
uavcrew = "mcp_server.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
